remove target atribute

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     </div>
                 </div>
                 <div class="footer-btn d-flex justify-content-center mb-5">
-                    <a href="./home.html" target="_blank"  class="view-more btn text-light">View More</a>
+                    <a href="home.html"   class="view-more btn text-light">View More</a>
                 </div>
                 
 
